--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         
         // Yopish Button Click Handler
         document.getElementById('yopishButton').addEventListener('click', function() {
-            window.location.href = 'https://maps.app.goo.gl/ZVCSufZKhiwH28X5A';
+            window.location.href = 'https://maps.app.goo.gl/gcpmHsYMoz1jmbXz8';
         });
 
         // Close popup button handler
